# el_paso

./: .env  Cargo.toml  Rocket.toml  dss_start.sql
migrations/2021-12-06-010251_users/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/errors/: auth.rs
src/models/: mod.rs  user.rs
src/models/user/: new_user.rs  user.rs
src/routes/: api.rs  mod.rs
src/routes/api/: mod.rs  ping.rs
