[package]
name = "el_paso"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = [
    "chrono",
    "postgres",
    "r2d2",
    "uuidv07",
] }
dotenv = "0.15.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = { version = "1.0.130", features = ["derive"] }
bcrypt = "0.10.1"
rand = "0.8.4"
