[package]
name = "el_paso"
version = "0.1.0"
edition = "2018"
authors = ["Goutham Krishna K V <gauthamkrishna9991@live.com>"]

[dependencies]
# Diesel ORM
diesel = { version = "1.4.8", features = [
    "chrono",
    "postgres",
    "r2d2",
    "uuidv07",
] }
# Environment Variable Library
dotenv = "0.15.0"
# UUID Library
uuid = { version = "0.8.2", features = ["serde", "v4"] }
# Serializer-Deserializer Library
serde = { version = "1.0.130", features = ["derive"] }
# BCrypt Library
bcrypt = "0.10.1"
# Rand Library
rand = "0.8.4"
# Webserver Library (Rocket)
rocket = "0.5.0-rc.1"
# Rocket Database pools
[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]
